# coolname

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CONTRIBUTING.rst  FAQ.rst  HISTORY.rst  MANIFEST.in  README.rst  coveralls.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
coolname/: __init__.py  config.py  impl.py  loader.py
coolname/data/: adjective.txt  adjective_first.txt  adjective_near.txt  animal.txt  animal_breed.txt  animal_legendary.txt  color.txt  config.json  from2.txt  from_noun_no_mod.txt  noun_adjective.txt  of_modifier.txt  of_noun.txt  of_noun_no_mod.txt  prefix.txt  size.txt  subj2.txt
docs/: Makefile  classes-and-functions.rst  conf.py  customization.rst  environment-variables.rst  index.rst  make.bat  pyinstaller.rst  randomization.rst  thread-safe.rst
examples/russian/: animal.txt  color.txt  config.json
examples/russian_module/: __init__.py
requirements/: development.txt  docs.txt  test.txt
src/coolname/: impl.py
src/coolname/data/: adjective_first.txt  adjective_near.txt  animal_legendary.txt  config.json  from2.txt  noun_adjective.txt  of_modifier.txt  of_noun_no_mod.txt  prefix.txt  subj2.txt
tests/: common.py  generate.py  generate_slug.py  import_coolname_and_print_slugs.py  measure_performance.py  test_coolname.py  test_coolname_env.py  test_data.py  test_impl.py  test_loader.py
